# fnvr-dgx

./: .gitignore  CHANGELOG.md  LICENSE  PLAN.md  README.md  Taskfile.yml  go.work
.github/workflows/: ci.yml
apps/api-server/: README.md  go.mod  go.sum
apps/api-server/cmd/api/: main.go
apps/api-server/internal/auth/: auth.go  auth_test.go
apps/api-server/internal/calibration/: sampler.go
apps/api-server/internal/camera/: state.go  store.go
apps/api-server/internal/classes/: store.go
apps/api-server/internal/config/: config.go
apps/api-server/internal/db/: db.go
apps/api-server/internal/detections/: store.go  summary.go  summary_test.go
apps/api-server/internal/events/: bus.go
apps/api-server/internal/flags/: dataset.go  store.go
apps/api-server/internal/metrics/: metrics.go
apps/api-server/internal/mlworker/: client.go
apps/api-server/internal/mtxproxy/: client.go  reconciler.go  tlsprobe.go
apps/api-server/internal/notifications/: store.go
apps/api-server/internal/persons/: clusters.go  enrolprune.go  enrolprune_test.go  erasure.go  retromatch.go  retromatch_test.go  store.go
apps/api-server/internal/pipeline/: client.go  state.go
apps/api-server/internal/pipemetrics/: pipemetrics.go  pipemetrics_test.go
apps/api-server/internal/plates/: store.go
apps/api-server/internal/rules/: store.go
apps/api-server/internal/segments/: store.go
apps/api-server/internal/server/: advanced.go  alarm.go  authflow.go  class_mutes.go  classes.go  clusters.go  detector.go  detector_test.go  drift.go  faces.go  faces_upload.go  flags.go  ha.go  hailo.go  middleware.go  notifications.go  persons.go  pipeline_tunables.go  pipemetricshttp.go  plates.go  segments.go  server.go  server_test.go  storage.go  users.go
apps/api-server/internal/settings/: advanced.go  advanced_test.go  store.go  store_test.go
apps/api-server/internal/snapshot/: snapshot.go
apps/api-server/internal/system/: devices.go  disk.go
apps/api-server/internal/whep/: registry.go
apps/event-processor/: README.md  go.mod  go.sum
apps/event-processor/cmd/: main.go
apps/event-processor/internal/metrics/: metrics.go
apps/event-processor/internal/rules/: engine.go
apps/event-processor/internal/sidecar/: writer.go
apps/hailo-broker/: CMakeLists.txt
apps/hailo-broker/src/: hailo_inference.cpp  hailo_inference.h  main.cpp  wire.h
apps/ml-worker/: README.md  pyproject.toml
apps/ml-worker/fnvr_ml/: __init__.py  align.py  app.py  clusters.py  drift.py  face_consumer.py  inference.py  migrate.py  printmon.py  scheduler.py  scrfd.py  tao_stub.py
apps/notification-dispatcher/: README.md  go.mod  go.sum
apps/notification-dispatcher/cmd/: main.go
apps/pipeline-supervisor/: CMakeLists.txt  README.md
apps/pipeline-supervisor/nvdsinfer_plates/: Makefile  nvdsparse_plates.cpp
apps/pipeline-supervisor/nvdsinfer_rfdetr/: Makefile  nvdsparse_rfdetr.cpp
apps/pipeline-supervisor/nvdsinfer_scrfd/: Makefile  nvdsparse_scrfd.cpp
apps/pipeline-supervisor/src/: config.cpp  config.h  db_reconciler.cpp  db_reconciler.h  face_crop_jpeg.cpp  face_crop_jpeg.h  gpu_jpeg.cpp  gpu_jpeg.h  grouping.cpp  grouping.h  hailo_inference.cpp  hailo_probe.cpp  hailo_probe.h  main.cpp  nats_publisher.cpp  nats_publisher.h  object_phash.cpp  object_phash.h  pipeline.cpp  pipeline.h  preview_probe.cpp  preview_probe.h  rtsp_probe.cpp  rtsp_probe.h  supervisor.cpp  supervisor.h  surface_alloc.cpp  surface_alloc.h  whep_server.cpp  whep_server.h
apps/storage-manager/: README.md  go.mod
apps/storage-manager/cmd/: main.go
apps/web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/web/public/: mtx-reader.js
apps/web/src/: index.css  main.tsx
apps/web/src/components/: CameraToggle.tsx  (+2 more)
apps/webrtc-signaling/: README.md
deploy/config/: fnvr.sample.yaml  mediamtx.yml  nats-server.conf
deploy/config/nvinfer/: README.md  adaface.txt  arcface.txt  lpdnet.txt  lprnet.txt  peoplenet.txt  platedet.txt.template  plateocr.txt  rfdetr.txt.template  scrfd.txt  scrfd.txt.template  tracker_NvDCF.yml  trafficcamnet.labels  trafficcamnet.txt  yolo11.txt  yolo26.txt.template
deploy/config/nvinferserver/: rfdetr_grpc.txt
deploy/docker/: Dockerfile.api  Dockerfile.events  Dockerfile.hailo-broker  Dockerfile.ml  Dockerfile.notifications  Dockerfile.pipeline  Dockerfile.storage  Dockerfile.web  calibrate-yolo26.sh  docker-compose.dual-nic.yml  docker-compose.hailo.yml  docker-compose.yml  hailo-broker-entrypoint.sh  nginx.conf  pipeline-entrypoint.sh  secrets.env.example  triton-entrypoint.sh
deploy/hailo/: install-hailo-host.sh
docs/: README.md
docs/architecture/: README.md  data-model.md  face-id.md  notifications.md  pipeline.md  rules-engine.md  storage.md
docs/compliance/: README.md
docs/deployment/: dual-nic.md  jetson-host-setup.md  known-issues.md  m2-smoke-test.md
docs/developer/: building-pipeline.md  metrics.md  migrations.md  nats-subjects.md  repo-layout.md  running-locally.md
docs/operations/: dual-nic.md  face-id.md  false-positive-flags.md  hailo-install.md  install.md  known-issues.md  postgres-tuning.md  settings.md  storage-management.md  troubleshooting.md  upgrade.md
libs/go-common/: README.md
libs/proto/: README.md  buf.gen.yaml  events.proto  pipeline.proto
tools/benchmark/: README.md  after-batched-mux-2026-07-16.txt  baseline-2026-05-03.txt  baseline-dgx-phase1-2026-07-16.txt  batched-mux-comparison-2026-07-16.md  before-batched-mux-2026-07-16.txt  capture-dgx.sh  rfdetr-ab-2026-07-16.md
tools/compile-hef/: Dockerfile  README.md  compile-direct.py  compile.sh  make-calib.py
tools/migrate/migrations/: 0001_init.sql
tools/model-prep/: convert_obico_darknet.py  export_adaface.py  export_rfdetr.py  export_topofr.py  fetch_obico_model.py  fetch_plate_models.py  prep_scrfd.py
tools/quant-onnx/: Dockerfile  make-npy.py  quant.sh
tools/retro/: retro-replay.sh
tools/stream-probe/: README.md
tools/train-detector/: Dockerfile  README.md  export_yolo26.py  pull-dataset.sh  train.py  trim-classes.py
tools/transcoder/: transcoder.py
(+117 files in other folders)
