[project]
name = "fnvr-ml"
version = "0.1.0"
description = "fnvr face-id worker: photo-upload enrol + unknown-face clustering + drift detection"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "onnxruntime>=1.22,<2",
    "numpy>=2.1,<3",
    "opencv-python-headless>=4.11,<5",
    "hdbscan>=0.8.40,<0.9",
    "apscheduler>=3.11,<4",
    "psycopg[binary]>=3.2,<4",
    "pillow>=11,<12",
    "httpx>=0.28,<1",
    "nats-py>=2.10,<3",
    "python-multipart>=0.0.18",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["fnvr_ml*"]
